# h2-in-pipes

./: .gitignore  CITATION.cff  Condensing Boiler Heating Value.xlsx  Condensing Boiler Heating Value.xlsx:Zone.Identifier  Hydrogen_pipe_friction.pdf:Zone.Identifier  LICENSE  Makefile  README.md  Sargent_Sargent_H2_Pipes_Revised_2.tex  Sargent_Sargent_H2_Pipes_Supplementary_2.tex  _SUBMIT3-BOTH-Hydrogen_pipe_friction.tex  csvstuff.py  download-latest-release.sh  f_table.txt  ff_oregon.csv  ff_oregon.txt  ff_oregon_lam.csv  ff_princeton.csv  ff_princeton.txt  gas_data.py  gasdem.py  gcff.py  goldf.py  goldfn.py  h2pipe-2024-01-24.tex  h2pipe.bib  h2pipe2024-02-24.tex  iC5.py  longpipe.py  moody.py  moody1.py  moody2.py  moody3.py  nikuradse.csv  nikuradse.xlsx  nikuradse0.csv  pdfinfo.py  peng.py  peng1.py  peng_utils.py  (+14 more)
